# Projeto_Aplicado_II

./: .env.exemplo  .gitignore  README.md  download_data.py  environment.yml  main.py  pyproject.toml
notebooks/: Link- Vídeo da apresentação  analise_olist_resultados.ipynb  etapa3.ipynb
utils/: download_data.py
