[project]
name = "projeto-aplicado-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pip>=25.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=79.0.1",
    "spacy",
    "tqdm",
    "wheel>=0.45.1",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
